objects/Apttus_Config2__AdHocGroup__c.object
<CustomObject>
    <description>Represents a totaling group</description>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>he charge type associated with the group</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product category. Only applicable to category totaling groups</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Totaling Groups</relationshipLabel>
        <relationshipName>TotalingGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Totaling Groups</relationshipLabel>
        <relationshipName>AdHocGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The group description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Frequency__c</fullName>
        <description>The frequency associated with the recurring or usage price</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupType__c</fullName>
        <description>The group type</description>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                    <default>true</default>
                    <label>Category</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The group display sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Totaling Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Totaling Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>